src/codes/backend/Testes/resultados/log_2025-11-13_21-59-16.txt

--- 🚀 [GLOBAL SETUP] Iniciando ambiente de teste ---
file:///F:/Programacao/GitHub/pbr-si-2025-2-p3-tiapn-t1-9147100-smart-gestao/src/codes/backend/routes/transactionRoutes.js:15
  deleteAttachment,
  ^^^^^^^^^^^^^^^^
SyntaxError: The requested module '../controllers/transactionController.js' does not provide an export named 'deleteAttachment'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:228:21)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async ModuleJob.run (node:internal/modules/esm/module_job:337:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:665:26)
    at async default (file:///F:/Programacao/GitHub/pbr-si-2025-2-p3-tiapn-t1-9147100-smart-gestao/src/codes/backend/Testes/config/globalSetup.js:157:24)
    at async F:\Programacao\GitHub\pbr-si-2025-2-p3-tiapn-t1-9147100-smart-gestao\src\codes\backend\node_modules\@jest\core\build\index.js:3166:11
    at async waitForPromiseWithCleanup (F:\Programacao\GitHub\pbr-si-2025-2-p3-tiapn-t1-9147100-smart-gestao\src\codes\backend\node_modules\@jest\transform\build\index.js:141:5)
    at async ScriptTransformer.requireAndTranspileModule (F:\Programacao\GitHub\pbr-si-2025-2-p3-tiapn-t1-9147100-smart-gestao\src\codes\backend\node_modules\@jest\transform\build\index.js:625:16)
    at async runGlobalHook (F:\Programacao\GitHub\pbr-si-2025-2-p3-tiapn-t1-9147100-smart-gestao\src\codes\backend\node_modules\@jest\core\build\index.js:3162:9)
    at async runJest (F:\Programacao\GitHub\pbr-si-2025-2-p3-tiapn-t1-9147100-smart-gestao\src\codes\backend\node_modules\@jest\core\build\index.js:3429:5)
    at async _run10000 (F:\Programacao\GitHub\pbr-si-2025-2-p3-tiapn-t1-9147100-smart-gestao\src\codes\backend\node_modules\@jest\core\build\index.js:1543:5)
    at async runCLI (F:\Programacao\GitHub\pbr-si-2025-2-p3-tiapn-t1-9147100-smart-gestao\src\codes\backend\node_modules\@jest\core\build\index.js:1444:3)
    at async Object.run (F:\Programacao\GitHub\pbr-si-2025-2-p3-tiapn-t1-9147100-smart-gestao\src\codes\backend\node_modules\jest-cli\build\index.js:656:9)

--- FIM DOS TESTES AUTOMATIZADOS (Status: Falha) ---
